# generative_ai_structured_output_generation

./: README.md  pyproject.toml
.github/workflows/: ci.yml
subscription_plans/: __init__.py  api.py  llm.py  models.py  pipeline.py  retrieval.py  schema.py  validator.py
subscription_plans.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
subscription_plans/data/: seed_corpus.json
subscription_plans/prompts/: base_prompt.txt
tests/: test_pipeline.py  test_validator.py
