[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-plans"
version = "0.1.0"
description = "Streaming subscription plan generator with validation and FastAPI service."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Streaming Plans Bot"}]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.21.0",
    "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
